# FinReport-Agent

./: .commit.cmd  .commit.ps1  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: ai-service-ci.yml  backend-ci.yml  frontend-ci.yml
ai-service/: .coveragerc  .dockerignore  Dockerfile  pyproject.toml
ai-service/app/: main.py
ai-service/app/api/: health.py  models.py  parse.py
ai-service/app/core/: config.py  exceptions.py  minio_client.py  redis_client.py
ai-service/app/modules/extractor/: extractor.py  handler.py  prompts.py  validator.py
ai-service/app/modules/generator/: __init__.py  chart_renderer.py  pdf_converter.py  prompts.py  report_generator.py
ai-service/app/modules/generator/chart_templates/: __init__.py
ai-service/app/modules/generator/templates/: report.html
ai-service/app/modules/modelhub/: __init__.py  llm_loader.py  modelhub.py  vram_scheduler.py
ai-service/app/modules/parser/: document_parser.py  handler.py  ocr_fallback.py  parser_factory.py  table_recognizer.py
ai-service/app/modules/reasoner/: accounting_rules.py  anomaly_detector.py  handler.py  llm_reviewer.py  rule_engine.py
ai-service/app/mq/: consumer.py  producer.py
ai-service/app/schemas/: chart.py  document.py  models.py  parse.py  pdf.py  reasoning.py  report.py  statement.py  statement_schema.json  task.py
ai-service/app/utils/: logger.py
ai-service/tests/: conftest.py  test_ci_workflows.py  test_e2e_m116_helpers.py  test_m1_development_overlay.py  test_m1_init_scripts.py  test_m1_l3_service.py  test_m1_mq_reconnect.py  test_m2_document_parser.py  test_m2_extractor.py  test_m2_integration_real_pdf.py  test_m2_modelhub.py  test_m2_ocr_fallback.py  test_m2_parse_endpoint.py  test_m2_parse_handler.py  test_m2_parser_factory.py  test_m2_table_recognizer.py  test_m2_validator.py  test_m2_vram_scheduler.py  test_m3_anomaly_detector.py  test_m3_chart_renderer.py  test_m3_llm_reviewer.py  test_m3_pdf_converter.py  test_m3_report_generator.py  test_m3_rule_engine.py
backend/: .dockerignore  Dockerfile  pom.xml
backend/config/: checkstyle.xml  spotbugs-exclude.xml
data/benchmark/: README.md
deploy/: .env.example  docker-compose.dev.yml  docker-compose.yml
deploy/minio/: init.sh
deploy/mysql/: init.sql
deploy/rabbitmq/: definitions.json  rabbitmq.conf
docs/: deployment.md  skills.md
docs/api/: openapi.yaml
docs/decisions/: 2026-07-14-m1-02-docker-compose.md  2026-07-14-m1-03-flyway-migration.md  2026-07-14-m1-04-to-m1-06-init-scripts.md  2026-07-14-m1-07-springboot-skeleton.md  2026-07-14-m1.08-m1.09-implementation.md  2026-07-14-m1.10-m1.11-implementation.md  2026-07-14-max-effort-code-review-m1.md  2026-07-14-pre-m1-preparation.md  2026-07-15-m1.12-implementation.md  2026-07-15-r2dbc-upload-fix-and-repository-review.md  2026-07-16-m1-01-to-m1-12-deep-review.md  2026-07-17-m1-reacceptance-delivery-archive.md  2026-07-20-m2-05-model-lock.md  (+29 more)
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: _test_cninfo.py  _test_orgid.py  declare_mq.py  dl2.py  download_models.py  download_sample.py  e2e_m116.py  eval_m2_f1.py  eval_m2_sla.py  extract_ground_truth.py  init_milvus.py  init_minio.py  inject_mock_progress.py
(+168 files in other folders)
