[project]
name = "finreport-ai-service"
version = "0.1.0"
description = "FinReport Agent — L3 AI 服务层"
requires-python = ">=3.11"
readme = {text = "A 股上市公司财报深度解析 Agent — AI 服务层", content-type = "text/plain"}
license = {text = "MIT"}
authors = [{name = "FinReport Dev"}]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
]

[project.optional-dependencies]
prod = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "pika>=1.3",             # RabbitMQ client
    "redis>=5.0",            # Redis client
    "pymilvus>=2.4",         # Milvus client
    "minio>=7.2",            # MinIO client
    "pymupdf>=1.24",         # PDF 解析
    "paddlepaddle>=2.6",    # PaddleOCR 推理后端（CPU 版；GPU 见 spec §4.7）
    "paddleocr>=2.7",        # PP-Structure 表格还原 + PaddleOCR 兜底
    "python-multipart>=0.0.6",  # /parse/upload 端点
    "httpx>=0.27",           # Async HTTP client
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "black>=24.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers"]
