[project]
name = "finreport-ai-service"
version = "0.1.0"
description = "FinReport Agent — L3 AI 服务层"
requires-python = ">=3.11"
readme = {text = "A 股上市公司财报深度解析 Agent — AI 服务层", content-type = "text/plain"}
license = {text = "MIT"}
authors = [{name = "FinReport Dev"}]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
]

[project.optional-dependencies]
prod = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "pika>=1.3",             # RabbitMQ client
    "redis>=5.0",            # Redis client
    "pymilvus>=2.4",         # Milvus client
    "minio>=7.2",            # MinIO client
    "pymupdf>=1.24",         # PDF 解析
    "paddlepaddle>=2.6",    # PaddleOCR 推理后端（CPU 版；GPU 见 spec §4.7）
    "paddleocr>=2.7",        # PP-Structure 表格还原 + PaddleOCR 兜底
    "python-multipart>=0.0.6",  # /parse/upload 端点
    "httpx>=0.27",           # Async HTTP client
    "torch>=2.3,<2.6",       # M2.04 ModelHub 推理后端（CUDA 12.1 wheel）
    "transformers>=4.40",    # M2.04 LLM 加载（GPTQ / bitsandbytes 4-bit）
    "accelerate>=0.30",      # M2.04 device_map="auto" + CPU offload
    "bitsandbytes>=0.43",    # M2.04 nf4 量化（1.5B QLoRA 基座）
    # M3.06 报告图表渲染（spec §2.3 M10 ECharts 服务端渲染 PNG）
    "matplotlib>=3.8",       # 3 张图表（饼图/折线/柱状）服务端渲染
    "pillow>=10.0",          # matplotlib 图像后端 + PNG bytes 处理
    # M3.07 Markdown → PDF（spec §2.3 M10 WeasyPrint）
    "weasyprint>=60.0",      # HTML/CSS → PDF（spec 字面要求）
    "markdown>=3.5",         # ReportResult.to_markdown() → HTML
    "jinja2>=3.1",           # report.html 模板渲染
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "black>=24.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers"]
